# jackbeat

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
pkgdata/: Makefile.am
pkgdata/glade/: Makefile.am  jackbeat.glade  jackbeat.ui  jackbeat_gtk3.ui
pkgdata/help/: Makefile.am
pkgdata/pixmaps/: Makefile.am
src/: Makefile.am  arg.c  arg.h  config.h.in  error.c  error.h  grid.c  grid.h  gui.c  gui.h  jab.c  jab.h  main.c  osc.c  osc.h  rc.c  rc.h  sample.c  sample.h  sequence.c  sequence.h  song.c  song.h  types.h  util.c  util.h
src/core/: Makefile.am  array.h  compat.c  compat.h  event.c  event.h  msg.c  msg.h  pa_ringbuffer.c  pa_ringbuffer.h  pool.c  pool.h  ringbuffer.c  ringbuffer.h
src/gui/: builder.c  builder.h  common.h  dk.c  dk.h  file.c  file.h  misc.c  misc.h  prefs.c  prefs.h  sequenceeditor.c  sequenceeditor.h  slider.c  slider.h  toggle.c  toggle.h
src/gui/phat/: phat.h  phatfanslider.c  phatfanslider.h  phathfanslider.c  phathfanslider.h  phatknob.c  phatknob.h  phatprivate.c  phatprivate.h  phatrange.c  phatrange.h  phatvfanslider.c  phatvfanslider.h  sample-display.c  sample-display.h
src/stream/: Makefile.am  device.c  device.h  driver.c  driver.h  jack.c  jack.h  null.c  null.h  paudio.c  paudio.h  pulse.c  pulse.h  stereo.c  stereo.h  stream.c  stream.h  test.c
